--- a/README.adoc
+++ b/README.adoc
@@ -27,9 +27,11 @@ Ce projet est cloné automatiquement au début de votre projet de PTUT S2, il co
 
 == Équipe de développement (à mettre à jour)
 
-- Membre 1
-- Membre 2
-- ...
+- Hugo Flinois
+- Clément PAGES
+- Vincent Peyrot
+-Nathan Chaugier
+
 
 :version: v0
 == Version initiale fournie : {version}
