--- a/README.adoc
+++ b/README.adoc
@@ -60,7 +60,7 @@ image::doc/media/{version}/sni.png[SNI,width=80%]
 | _24/05_ | _Exemple_   |  link:doc/media/v0/dc.png[PNG]    |
 | 25/05   | Gantt V1    |  link:gantt/ptut_v1.pdf[PDF]      | Tout semble OK (mais je ne suis pas un spécialiste de Gantt)...
 | 26/05   | CdC V1      |  link:Diagrammes/CreerClient/CahierDesCharges.pdf[PDF]|          
-|         | Gantt V1-2  |  link:gantt/ptut-v1-2.pdf[PDF]    |      
+|         | Gantt V1-2  |  link:gantt/ptut_v1-2.pdf[PDF]    |      
 | 27/05   | CdC V1 final |                     | 
 |         | Gantt V1-3  |    |
 | 28/05   | CdC V2 final |    |
