--- a/README.adoc
+++ b/README.adoc
@@ -62,7 +62,7 @@ image::doc/media/{version}/sni.png[SNI,width=80%]
 | 26/05   | CdC V1      |  link:Diagrammes/CDC_V1.pdf[PDF]|          
 |         | Gantt V1-2  |  link:gantt/ptut_v1-2.pdf[PDF]    |      
 | 27/05   | CdC V1 final |                     | 
-|         | Gantt V1-3  |    |
+|         | Gantt V1-3  | link:gantt/ptut_v1-3.pdf[PDF]   |
 | 28/05   | CdC V2 final |    |
 |         | Gantt V2    |          |             
 |         | Doc. Util. V1 |             |          
