--- a/README.adoc
+++ b/README.adoc
@@ -63,7 +63,7 @@ image::doc/media/{version}/sni.png[SNI,width=80%]
 |         | Gantt V1-2  |  link:gantt/V1/ptut_v1-2.pdf[PDF]    |      
 | 27/05   | CdC V1 final | link:Diagrammes/CDC_V1_final.pdf[PDF]                    | 
 |         | Gantt V1-3  | link:gantt/V1/ptut_v1-3.pdf[PDF]   |
-| 28/05   | CdC V2 final |link:Diagrammes/CDC_V2_Final.pdf[PDF]   |
+| 28/05   | CdC V2 final |link:Diagrammes/CDV_V2_Final.pdf[PDF]   |
 |         | Gantt V2    | link:gantt/V2/ptut_v2.pdf[PDF]         |             
 |         | Doc. Util. V1 |link:Documentations/doc_utilisateur/doc_utilisateur_V1.pdf[PDF]              |          
 |         | Doc. Tec. V1 |                   |    
