--- a/README.adoc
+++ b/README.adoc
@@ -74,7 +74,7 @@ image::doc/media/{version}/sni.png[SNI,width=80%]
 |         | Doc. Tec. V2 |                  |     
 |         | Code V2     |                       |
 |         | Recette V2  |                       |
-|         | Gantt V2-3    |                       |
+|         | Gantt V2-3    |link:gantt/V2/ptut_v2-2.pdf[PDF]                       |
 |         | `jar` projet |    |
 | 02/06   | Gantt V3-1    |       |
 | 03/06   | Doc. Util. V3 |            |           
