--- a/README.adoc
+++ b/README.adoc
@@ -72,7 +72,7 @@ image::doc/media/{version}/sni.png[SNI,width=80%]
 | 31/05   | Gantt V2-1    | link:gantt/V2/ptut_v2-1.pdf[PDF]      | Pas vu le diff avec V2
 | 01/06   | Doc. Util. V2 | link:Documentations/doc_utilisateur/doc_utilisateur_V2.pdf[PDF]           |    Doc très exhaustive, c'est bien.   Essayez d'intégrer une vue d'ensemble.    
 |         | Doc. Tec. V2 | link:doc/docTechnique_V2.adoc[ADOC]                 |     Où est la javadoc ?
-|         | Code V2     |                       |
+|         | Code V2     | link:WSPCE_JAVA/V1-old/src[CODE]                      |
 |         | Recette V2  |link:Documentations/cahier_de_recettes/V2/cahier_de_recettes_v2.pdf[PDF]                       | Même remarque : ils passent ces tests ou pas?
 |         | Gantt V2-3    |link:gantt/V2/ptut_v2-2.pdf[PDF]                       | Vu.
 |         | `jar` projet |    |
